# AlgosNds

./: AddTwoNumbers.java  ArraysOfArrays.java  ClimbingStairs.java  CountAndSay.java  DFS.java  DecimalToBinary.java  DegreeOfArray.java  FactorialRecu.java  FindDegree.java  GoogleProblem2.java  IntervalOverlap.java  Inventory.java  LinkedListAdd.java  LinkedLists1.java  LongestSubstring.java  MakeAnagrams.java  MaxAreaOfIsland.java  MaxNegSubArray.java  MaximumAvgSumSubarray.java  MaximumProductSubarray.java  NaryTreeTraversal.java  PocketGemsIntevriew2.java  PoorPigs.java  PrintMultiplicationTable.java  Queue1.java  RegexPractice.java  RemoveNthReference.java  ReverseArray.java  ReverseInteger.java  ReverseNodeKGroup.java  RobotPath.java  RodCuttingProblem.java  RomanToInteger.java  RotateArray.java  ServiceTitanQuestion1.java  Solution.java  Solution1.java  Solutionx.java  SortedMerge.java  SortingColor.java  (+6 more)
C++ Practice/Programming/: CMakeLists.txt  helloWorld.cpp
C++ Practice/Programming/DataStructures/: Structures.cpp  arrays.cpp
C++ Practice/Programming/ProgrammingProblems/: DirectAddressingTable.cpp  FourSum.cpp  GroupAnagrams.cpp  MinimumWindowSubstring.cpp  ThreeSum.cpp  ThreeSumClosest.cpp  isValidPalindrome.cpp  isValidPalindrome.h  kSum.cpp
C++ Practice/Programming/Threads/: HelloWorld.cpp
CollectionPractice/: collectionclass.java
DataStructure/: StackUsingVectors.java
DataStructures/: LinkedList.java
DynamicProgramming/: MatrixChainMultiplication.java
Java Practice/: AddTwoNumbers.java  ArrayPartition.java  BFS.java  CompressString.java  (+24 more)
(+109 files in other folders)
